force-app/main/default/objects/SalesArea__c/SalesArea__c.object-meta.xml
<CustomObject>
    <label>Sales Area</label>
    <nameField>
        <label>Sales Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>