force-app/main/default/objects/SalesArea__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <defaultValue>&quot;01&quot;</defaultValue>
    <label>Distribution Channel</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>