force-app/main/default/objects/SalesArea__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <defaultValue>&quot;01&quot;</defaultValue>
    <label>Division</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>