force-app/main/default/objects/SalesArea__c/fields/SalesAreaNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaNumber__c</fullName>
    <formula>SalesOrg__c&amp;&quot;-&quot;&amp;DistributionChannel__c&amp;&quot;-&quot;&amp;Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Area Number</label>
    <type>Text</type>
</CustomField>