force-app/main/default/objects/SalesArea__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <description>This field is used to storage of Country code.</description>
    <label>Sales Org</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>