force-app/main/default/objects/SalesArea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesOrg__c</columns>
    <columns>DistributionChannel__c</columns>
    <columns>Division__c</columns>
    <columns>SalesAreaNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>